...
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="90" id="1Tq-L8-nwH"/>
                                    <constraint firstAttribute="width" constant="150" id="BOh-gG-tjW"/>
                                    <constraint firstAttribute="height" constant="90" id="KCJ-ZV-GZw"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="zgU-M6-hN5"/>
                                </constraints>
                                <state key="normal" title="Save">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="save:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5yW-Wc-TNr"/>
                                </connections>
...
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="Hdx-Fa-8nh"/>
                                    <constraint firstAttribute="width" constant="150" id="lMX-yu-E8j"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="90" id="nyK-8v-GFi"/>
                                    <constraint firstAttribute="height" constant="90" id="u9H-qT-3B1"/>
                                </constraints>
                                <state key="normal" title="Record">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="record:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y1y-VH-UJo"/>
                                </connections>
...
                                <rect key="frame" x="56" y="469" width="484" height="74"/>
                                <color key="backgroundColor" red="0.02146464646464652" green="0.02146464646464652" blue="0.02146464646464652" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="484" id="DGg-bg-TEN"/>
                                    <constraint firstAttribute="height" constant="74" id="fLO-dG-o7L"/>
                                </constraints>
                                <state key="normal" title="Sign Your Video">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <segue destination="sHZ-EH-1kE" kind="show" id="3Fw-NV-dND"/>
                                </connections>
                            </button>
...
                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="484" id="GGp-X0-SvD"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="74" id="P8z-av-Q3X"/>
                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="74" id="V8l-SE-Vaw"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="484" id="WFb-8v-YmI"/>
                                    <constraint firstAttribute="height" constant="74" id="zzX-lo-wH3"/>
                                </constraints>
                                <state key="normal" title="Done">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="qpH-Yv-OJn"/>
                                </connections>
                            </button>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kZC-Wp-xdh">
                                <rect key="frame" x="155" y="488" width="107" height="30"/>
                                <animations/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="registerUser:" destination="RQv-Mm-OBL" eventType="touchUpInside" id="Kih-tN-hjJ"/>
                                    <segue destination="ayp-uR-6yz" kind="show" identifier="Register" id="asV-fx-RxF"/>
                                </connections>
...
