...
        _passwordTextField.text = nil;
        
    }
    
    else{
        UIAlertController * success = [UIAlertController alertControllerWithTitle:@"Ooops" message:@"Your username and password does not match. Plese try again." preferredStyle:UIAlertControllerStyleAlert];
        UIAlertAction *defaultAction = [UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleCancel handler:^(UIAlertAction *action) {}];
        [success addAction:defaultAction];
        [self presentViewController:success animated:YES completion:nil];
    }
    
}
-(BOOL)textFieldShouldReturn:(UITextField *)textField{
...
